--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="words.js" type="text/javascript"></script>
     <title>Wordle Copy</title>
 </head>
 <body>
@@ -12,36 +13,36 @@
     </div>
     <div id="keyboard">
         <div id="set">
-            <button onclick="addLetter({key: 'q', preventDefault: function(){event.preventDefault()}})">Q</button>
-            <button onclick="addLetter({key: 'w', preventDefault: function(){event.preventDefault()}})">W</button>
-            <button onclick="addLetter({key: 'e', preventDefault: function(){event.preventDefault()}})">E</button>
-            <button onclick="addLetter({key: 'r', preventDefault: function(){event.preventDefault()}})">R</button>
-            <button onclick="addLetter({key: 't', preventDefault: function(){event.preventDefault()}})">T</button>
-            <button onclick="addLetter({key: 'y', preventDefault: function(){event.preventDefault()}})">Y</button>
-            <button onclick="addLetter({key: 'u', preventDefault: function(){event.preventDefault()}})">U</button>
-            <button onclick="addLetter({key: 'i', preventDefault: function(){event.preventDefault()}})">I</button>
-            <button onclick="addLetter({key: 'o', preventDefault: function(){event.preventDefault()}})">O</button>
-            <button onclick="addLetter({key: 'p', preventDefault: function(){event.preventDefault()}})">P</button>
+            <button onclick="addLetter({key: 'q', preventDefault: function(){event.preventDefault()}})" id="btnQ">Q</button>
+            <button onclick="addLetter({key: 'w', preventDefault: function(){event.preventDefault()}})" id="btnW">W</button>
+            <button onclick="addLetter({key: 'e', preventDefault: function(){event.preventDefault()}})" id="btnE">E</button>
+            <button onclick="addLetter({key: 'r', preventDefault: function(){event.preventDefault()}})" id="btnR">R</button>
+            <button onclick="addLetter({key: 't', preventDefault: function(){event.preventDefault()}})" id="btnT">T</button>
+            <button onclick="addLetter({key: 'y', preventDefault: function(){event.preventDefault()}})" id="btnY">Y</button>
+            <button onclick="addLetter({key: 'u', preventDefault: function(){event.preventDefault()}})" id="btnU">U</button>
+            <button onclick="addLetter({key: 'i', preventDefault: function(){event.preventDefault()}})" id="btnI">I</button>
+            <button onclick="addLetter({key: 'o', preventDefault: function(){event.preventDefault()}})" id="btnO">O</button>
+            <button onclick="addLetter({key: 'p', preventDefault: function(){event.preventDefault()}})" id="btnP">P</button>
         </div>
         <div id="set">
-            <button onclick="addLetter({key: 'a', preventDefault: function(){event.preventDefault()}})">A</button>
-            <button onclick="addLetter({key: 's', preventDefault: function(){event.preventDefault()}})">S</button>
-            <button onclick="addLetter({key: 'd', preventDefault: function(){event.preventDefault()}})">D</button>
-            <button onclick="addLetter({key: 'f', preventDefault: function(){event.preventDefault()}})">F</button>
-            <button onclick="addLetter({key: 'g', preventDefault: function(){event.preventDefault()}})">G</button>
-            <button onclick="addLetter({key: 'h', preventDefault: function(){event.preventDefault()}})">H</button>
-            <button onclick="addLetter({key: 'j', preventDefault: function(){event.preventDefault()}})">J</button>
-            <button onclick="addLetter({key: 'k', preventDefault: function(){event.preventDefault()}})">K</button>
-            <button onclick="addLetter({key: 'l', preventDefault: function(){event.preventDefault()}})">L</button>
+            <button onclick="addLetter({key: 'a', preventDefault: function(){event.preventDefault()}})" id="btnA">A</button>
+            <button onclick="addLetter({key: 's', preventDefault: function(){event.preventDefault()}})" id="btnS">S</button>
+            <button onclick="addLetter({key: 'd', preventDefault: function(){event.preventDefault()}})" id="btnD">D</button>
+            <button onclick="addLetter({key: 'f', preventDefault: function(){event.preventDefault()}})" id="btnF">F</button>
+            <button onclick="addLetter({key: 'g', preventDefault: function(){event.preventDefault()}})" id="btnG">G</button>
+            <button onclick="addLetter({key: 'h', preventDefault: function(){event.preventDefault()}})" id="btnH">H</button>
+            <button onclick="addLetter({key: 'j', preventDefault: function(){event.preventDefault()}})" id="btnJ">J</button>
+            <button onclick="addLetter({key: 'k', preventDefault: function(){event.preventDefault()}})" id="btnK">K</button>
+            <button onclick="addLetter({key: 'l', preventDefault: function(){event.preventDefault()}})" id="btnL">L</button>
         </div>
         <div id="set">
-            <button onclick="addLetter({key: 'z', preventDefault: function(){event.preventDefault()}})">Z</button>
-            <button onclick="addLetter({key: 'x', preventDefault: function(){event.preventDefault()}})">X</button>
-            <button onclick="addLetter({key: 'c', preventDefault: function(){event.preventDefault()}})">C</button>
-            <button onclick="addLetter({key: 'v', preventDefault: function(){event.preventDefault()}})">V</button>
-            <button onclick="addLetter({key: 'b', preventDefault: function(){event.preventDefault()}})">B</button>
-            <button onclick="addLetter({key: 'n', preventDefault: function(){event.preventDefault()}})">N</button>
-            <button onclick="addLetter({key: 'm', preventDefault: function(){event.preventDefault()}})">M</button>
+            <button onclick="addLetter({key: 'z', preventDefault: function(){event.preventDefault()}})" id="btnZ">Z</button>
+            <button onclick="addLetter({key: 'x', preventDefault: function(){event.preventDefault()}})" id="btnX">X</button>
+            <button onclick="addLetter({key: 'c', preventDefault: function(){event.preventDefault()}})" id="btnC">C</button>
+            <button onclick="addLetter({key: 'v', preventDefault: function(){event.preventDefault()}})" id="btnV">V</button>
+            <button onclick="addLetter({key: 'b', preventDefault: function(){event.preventDefault()}})" id="btnB">B</button>
+            <button onclick="addLetter({key: 'n', preventDefault: function(){event.preventDefault()}})" id="btnN">N</button>
+            <button onclick="addLetter({key: 'm', preventDefault: function(){event.preventDefault()}})" id="btnM">M</button>
         </div>
         <div id="controls">
             <button onclick="addLetter({key: 'Backspace', preventDefault: function(){event.preventDefault()}})">Backspace</button>
@@ -53,13 +54,13 @@
             <div id="win">
                 <h1 id="title">Winner Winner!</h1>
                 <h3 id="score">Score:</h3>
-                <h3 id="avgScore">Average Score:</h3>
+                <h3 id="avgScoreW">Average Score:</h3>
                 <button onclick="playAgain()">Play Again!</button>
             </div>
             <div id="lose">
                 <h1 id="title">You Lost!</h1>
-                <h3 id="word">Word: </h3>
-                <h3 id="avgScore">Average Score: </h3>
+                <h3 id="word">Word:</h3>
+                <h3 id="avgScoreL">Average Score:</h3>
                 <button onclick="playAgain()">Play Again!</button>
             </div>
         </div>  
