Added more stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="game">
+        <p id="gameTitle">Wordle for Gamers</p>
     </div>
     <div id="keyboard">
         <div id="set">
