First word is CRV related rest is random common

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
             <div id="lose">
                 <h1 id="title">Better Luck Next Time!</h1>
-                <!-- <h3 id="word">Word:</h3>
-                <h3 id="avgScoreL">Average Score:</h3> -->
+                <h3 id="word">Word:</h3>
+                <!-- <h3 id="avgScoreL">Average Score:</h3> -->
                 <button onclick="playAgain()">Play Again!</button>
             </div>
         </div>  
