--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="game">
         <p id="naw">Not A Word!</p>
-        <p id="gameTitle"><strong><span style="color: #004280;">C</span><span style="color: #980B2C;">R</span><span style="color: #004280;">V</span> Wordle!</strong></p>
+        <h1 id="gameTitle"><strong><span style="color: #004280;">C</span><span style="color: #980B2C;">R</span><span style="color: #004280;">V</span> Wordle!</strong></h1>
     </div>
     <div id="keyboard">
         <div id="set">
